tests/good/test620.tig
let
  type iarr = array of int
  var arr := iarr [10] of 0
  var x := range(0, 2)
  var y := 0
  var idx := 0
in
  if x = 0 then
    y := range(0, 4)
  else
    y := range(5, 9);

  if y < 5 then
    idx := y
  else
    idx := 9 - y;

  arr[idx] := 42;
  print_int(arr[idx])
end
